# go-opensearch-rag-mcp-server

./: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  settings.py  test.py
servers/: __init__.py
servers/descriptions/: schemas.py  server.py
servers/resourses/: server.py
servers/resourсes/: server.py
servers/search/: schemas.py  server.py  tool_test.py  utils.py
servers/translator/: server.py
servers/translator/schemas/: requests.py
