[project]
name = "go-opensearch-rag-mcp-server"
version = "0.1.0"
description = ""
authors = [
    {name = "qTemiO",email = "71713499+qTemiO@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastmcp (>=2.13.0.2,<3.0.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "aiohttp (>=3.13.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "langchain (>=1.2.8,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain-mcp-adapters (>=0.2.1,<0.3.0)"
]
